# CYtool-plugin

./: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: errors.py  platform.py  plugin_admin.py  plugin_runtime.py
backend/app/core/: __init__.py  config.py  paths.py
backend/app/db/: __init__.py  repository.py
backend/app/platform_api/: __init__.py  database.py  errors.py  permissions.py  ssh.py
backend/app/plugins/: __init__.py  errors.py  lifecycle.py  manifest.py  package.py  runtime.py  version.py
backend/tests/: helpers.py  test_app_api.py  test_lifecycle.py  test_manifest.py  test_package.py  test_platform_database.py  test_platform_ssh.py  test_reference_plugins.py  test_repository.py  test_runtime.py  test_version.py
docs/: design.md  development.md  plugin-api.md  plugin-package.md  product-design-development.zh-CN.md  requirements.md  roadmap.md  test-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: PluginManager.vue
plugin_sources/encoding_converter/: plugin.json
plugin_sources/hash_tools/: plugin.json
plugin_sources/json_formatter/: plugin.json
plugin_sources/jwt_inspector/: plugin.json
plugin_sources/regex_tester/: plugin.json
plugin_sources/remote_command/: plugin.json
plugin_sources/string_tools/: plugin.json
plugin_sources/text_diff/: plugin.json
plugin_sources/time_converter/: plugin.json
plugins/encoding_converter/: plugin.json
scripts/: package_reference_plugins.py
(+22 files in other folders)
