[project]
name = "cytool-plugin"
version = "0.1.0"
description = "Python web platform for managing CYtool plugins."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "paramiko>=3.4"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py311"
